--- a/_includes/head.html
+++ b/_includes/head.html
@@ -97,5 +97,12 @@
   {% elsif site.avatar %}
   <meta name="twitter:image" content="{{ site.url }}{{ site.avatar }}" />
   {% endif %}
+  
+  <!-- add htmlwidget js files -->
+  {% if page.htmlwidget %}
+    {% assign dep_file = page.url | split: '/' | last | prepend : 'htmlwidgets/' | append : '.html' | replace: '.Rmd', '' %}
+    {% include {{dep_file}} %}
+  {% endif %}
+  <!-- end htmlwidget js files -->
 
 </head>
